// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render title MVP typescale correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h5
  aria-hidden="false"
  class="c0 c1"
>
  Title default
</h5>
`;

exports[`should render title VDS theme correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h5
  aria-hidden="false"
  class="c0 c1"
>
  Title VDS theme
</h5>
`;

exports[`should render title VDS typescale correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h5
  aria-hidden="false"
  class="c0 c1"
>
  Title VDS typescale
</h5>
`;

exports[`should render title VDS typescale correctly 2`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h5
  aria-hidden="false"
  class="c0 c1"
  id="test"
>
  Title VDS settypescale
</h5>
`;

exports[`should render title custom props correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h4
  aria-hidden="false"
  class="c0 c1"
>
  Title default
</h4>
`;

exports[`should render title default props correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h5
  aria-hidden="false"
  class="c0 c1"
>
  Title default
</h5>
`;

exports[`should render title grey faded correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #F6F6F6;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h5
  aria-hidden="false"
  class="c0 c1"
>
  Title grey faded
</h5>
`;

exports[`should render title large correctly 1`] = `
.c1 {
  font-size: 2rem;
  font-weight: 300;
  line-height: 2.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  -webkit-letter-spacing: 0.015625rem;
  -moz-letter-spacing: 0.015625rem;
  -ms-letter-spacing: 0.015625rem;
  letter-spacing: 0.015625rem;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h3
  aria-hidden="false"
  class="c0 c1"
>
  Title large
</h3>
`;

exports[`should render title primitive as h2 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h2
  aria-hidden="false"
  class="c0 c1"
>
  Title h2
</h2>
`;

exports[`should render title theme props correctly 1`] = `
.c1 {
  font-size: 1.25rem;
  font-weight: 400;
  line-height: 1.5rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h5
  aria-hidden="false"
  class="c0 c1"
>
  Title MVP w/ theme
</h5>
`;

exports[`should render title with default styles on mobile correctly 1`] = `
.c1 {
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.25rem;
  font-family: Verizon-NHG-eDS,Helvetica,Arial,Sans-serif;
  color: #000000;
  margin: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:active,
.c0:focus,
.c0:hover {
  outline: none;
}

<h5
  aria-hidden="false"
  class="c0 c1"
>
  Title on mobile
</h5>
`;
